@@ -182,6 +182,9 @@
 	<li>The HTML version of the table of contents did not
 	correctly nest the lists in the parent items (STR #10)</li>
 
+	<li>Borders around left and right-aligned images were
+	not drawn properly (PR #5112)</li>
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.23</H2>
